--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -174,7 +174,7 @@ ggplot(moyenne_liens_annee, aes(x = annee_debut, y = moyenne_liens_annee, fill =
 
 ```
 \
-**Figure 3.** Nombre moyens de liens par étudiant selon la session d'entrée à l'université.
+**Figure \ref{fig:histogramme}.** Nombre moyens de liens par étudiant selon la session d'entrée à l'université.
 \
 \
 En effet, le nombre total de lien ne devrait pas être plus bas à la session de l’automne 2019 ainsi qu’à l’hiver 2020 en comparaison avec les sessions qui suivent. Cela peut être expliqué par une trop petite taille de la population (puisqu’il s’agit d’une moyenne). Nous pourrions également expliquer cette diminution à l’aide des dynamiques sociales entre les êtres humains. En effet, malgré une présence plus longue dans la communauté, un individu plus introverti aura une participation plus faible au réseau d’interactions. 
